--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter_multi_select_items: ^0.4.2
   flutter_signin_button: ^2.0.0
+  provider: ^6.0.5
 
 dev_dependencies:
   flutter_test:
