--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,8 @@ dependencies:
   flutter_multi_select_items: ^0.4.2
   flutter_signin_button: ^2.0.0
   provider: ^6.0.5
+  carousel_slider: ^4.2.1
+  intl: ^0.18.0
 
 dev_dependencies:
   flutter_test:
