--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   provider: ^6.0.5
   carousel_slider: ^4.2.1
   intl: ^0.18.0
+  http: ^0.13.5
 
 dev_dependencies:
   flutter_test:
