--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,11 @@ dependencies:
   intl: ^0.18.0
   http: ^0.13.5
   flutter_staggered_grid_view: ^0.6.2
+  # Firebase
+  firebase_core: ^2.10.0
+  cloud_firestore: ^4.5.3
+  firebase_auth:
+
 
 dev_dependencies:
   flutter_test:
