Prueba de login

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   cloud_firestore: ^4.5.3
   firebase_auth:
   firebase_storage:
+  google_sign_in: ^6.1.0
 
 dev_dependencies:
   flutter_test:
