--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,9 @@ dependencies:
   flutter_multi_select_items: ^0.4.2
   flutter_signin_button: ^2.0.0
   provider: ^6.0.5
+  flutter_bloc:
+  equatable:
+  flutter_shimmer:
   carousel_slider: ^4.2.1
   intl: ^0.18.0
   http: ^0.13.5
@@ -42,11 +45,12 @@ dependencies:
   image_picker: ^0.8.7+4
   flutter_datetime_picker:
   # Firebase
-  firebase_core: ^2.10.0
-  cloud_firestore: ^4.5.3
   firebase_auth:
+  firebase_core: ^2.10.0
+  google_sign_in:
+  cloud_firestore: ^4.5.3
+
   firebase_storage:
-  google_sign_in: ^6.1.0
 
 dev_dependencies:
   flutter_test:
