--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,12 +44,12 @@ dependencies:
   flutter_staggered_grid_view: ^0.6.2
   image_picker: ^0.8.7+4
   flutter_datetime_picker:
+  url_launcher: ^6.1.11
   # Firebase
   firebase_auth:
   firebase_core: ^2.10.0
   google_sign_in:
   cloud_firestore: ^4.5.3
-
   firebase_storage:
 
 dev_dependencies:
