cambio de icono y nombre

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
         </intent>
     </queries>
    <application
-        android:label="lachancla"
+        android:label="La Chancla"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
